// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders risk area questions in editing mode 1`] = `
<div>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        123
      </div>
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Last updated:
          </div>
          <div
            className={undefined}
          >
            Jan 1, 2017
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            FirstName
          </div>
          <div
            className={undefined}
          >
            LastName
          </div>
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      Question
    </div>
    <div
      className=""
    >
      <div>
        <input
          disabled={false}
          type="checkbox"
          value="answer"
        />
        <label>
          Answer
        </label>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        Previous answer:
      </div>
      <div
        className={undefined}
      >
        Not applicable
      </div>
    </div>
  </div>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        987
      </div>
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Last updated:
          </div>
          <div
            className={undefined}
          >
            Jan 1, 2017
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            FirstName
          </div>
          <div
            className={undefined}
          >
            LastName
          </div>
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      Question
    </div>
    <div
      className=""
    >
      <div>
        <input
          disabled={false}
          type="checkbox"
          value="answer"
        />
        <label>
          Answer
        </label>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        Previous answer:
      </div>
      <div
        className={undefined}
      >
        Not applicable
      </div>
    </div>
  </div>
</div>
`;

exports[`renders risk area questions in non-editing mode 1`] = `
<div>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        123
      </div>
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Last updated:
          </div>
          <div
            className={undefined}
          >
            Jan 1, 2017
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            FirstName
          </div>
          <div
            className={undefined}
          >
            LastName
          </div>
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      Question
    </div>
    <div
      className=""
    >
      <div>
        <input
          disabled={true}
          type="checkbox"
          value="answer"
        />
        <label>
          Answer
        </label>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        Previous answer:
      </div>
      <div
        className={undefined}
      >
        Not applicable
      </div>
    </div>
  </div>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        987
      </div>
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Last updated:
          </div>
          <div
            className={undefined}
          >
            Jan 1, 2017
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            FirstName
          </div>
          <div
            className={undefined}
          >
            LastName
          </div>
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      Question
    </div>
    <div
      className=""
    >
      <div>
        <input
          disabled={true}
          type="checkbox"
          value="answer"
        />
        <label>
          Answer
        </label>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        Previous answer:
      </div>
      <div
        className={undefined}
      >
        Not applicable
      </div>
    </div>
  </div>
</div>
`;
